# Cachy

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  DEPLOY_HF.md  Dockerfile  NOTICE  README.md  context.md  deploy_hf.sh  insightr_design.html  start.py
app/: .metadata  README.md  pubspec.yaml
app/android/: build.gradle.kts  settings.gradle.kts
app/android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: firebase_options.dart  main.dart
app/test/: api_client_auth_test.dart  api_exception_test.dart  app_controller_test.dart  artifact_test.dart  auth_service_test.dart  bulk_move_test.dart  fakes.dart  library_wakeup_test.dart  local_ai_test.dart  local_store_test.dart  login_screen_test.dart  obsidian_export_test.dart  profile_account_test.dart  reduced_motion_test.dart  tags_and_lookup_test.dart  widget_test.dart
app/web/: index.html  manifest.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  discovery.py  logging_config.py  main.py  quota.py
backend/app/api/: auth_routes.py  cards.py  catalog.py  collections.py  concepts.py  connections.py  feed.py  graph.py  library_chat.py  me.py  media.py  presenter.py  search.py
backend/app/models/: artifact.py  card.py  collection.py  concept.py  job.py
backend/app/pipeline/: extraction.py  insight.py  structuring.py  worker.py
backend/app/pipeline/ingestion/: article.py  downloader.py  net_guard.py  resolvers.py  source.py
backend/app/services/: artifact_images.py  cache.py  embeddings.py  events.py  feed.py  llm_catalog.py  llm_chat.py  llm_concept.py  llm_gemini.py  llm_library_chat.py  llm_rabbithole.py  notify.py  serendipity.py
backend/app/store/: db.py  media.py
backend/tests/: conftest.py  test_api.py  test_article.py  test_auth.py  test_auth_routes.py  test_claim.py  test_collections.py  test_feed.py  test_hardening.py  test_health.py  test_insight.py  test_isolation.py  test_media.py  test_merge.py  test_ondevice.py  test_pipeline.py  test_prefer_local.py  test_quota.py  test_quota_routes.py  test_schema.py  test_structuring.py
code/: downloader.py
docs/: 00-overview.md  01-architecture.md  02-ingestion.md  03-extraction.md  04-structuring-and-schema.md  05-backend.md  06-frontend.md  07-visual-design.md  08-data-model.md  09-features.md  10-phasing-and-roadmap.md  11-assumptions-and-open-decisions.md  12-catalog-and-artifacts.md  13-actions-and-chat.md  MOBILE_CONNECTION_GUIDE.md  README.md
website/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  wrangler.jsonc
website/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
website/lib/: constants.ts  motion.ts  useReducedMotion.ts
(+121 files in other folders)
