[project]
name = "cachy-backend"
version = "0.1.0"
description = "Reel-to-knowledge backend: share a short-form video, get a structured card."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiofiles>=23.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    # ingestion
    "requests>=2.31",
    "yt-dlp>=2024.4.9",
    "instaloader>=4.11",
    "trafilatura>=1.8",  # keyless readable-article extraction (docs/02 article path)
    # extraction
    "Pillow>=10.0",
    "imagehash>=4.3",
    # structuring / transcription (optional at runtime, graceful fallback if keys absent)
    "cerebras-cloud-sdk>=1.0",  # note-generation primary (60k TPM free tier)
    "google-genai>=0.5",
    "groq>=0.9",
    "asyncpg>=0.29",
    # OCR is optional; pytesseract needs the tesseract binary present
    "pytesseract>=0.3.10",
    # image preprocessing for OCR (adaptive threshold + sharpen)
    "opencv-python-headless>=4.9",
    # local Whisper transcription — no API, no rate limits (model downloads on first use)
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
